--- a/mobile/src/main/res/layout/content_l_obd.xml
+++ b/mobile/src/main/res/layout/content_l_obd.xml
@@ -40,6 +40,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical"
+            app:layout_marginBottomPercent="2%h"
             app:layout_marginLeftPercent="2%h"
             app:layout_marginRightPercent="2%h">
 
