--- a/mobile/src/main/res/layout/content_l_taiya.xml
+++ b/mobile/src/main/res/layout/content_l_taiya.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_base"
@@ -7,23 +7,51 @@
     android:layout_height="match_parent"
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
 
-    <com.zhy.android.percent.support.PercentLinearLayout
+    <com.zhy.android.percent.support.PercentFrameLayout
+        android:id="@+id/fl_top2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_alignParentTop="true"
+        app:layout_heightPercent="12%h">
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:lines="1"
+            android:text="胎压"
+            app:layout_textSizePercent="50%h" />
+    </com.zhy.android.percent.support.PercentFrameLayout>
+
+    <com.zhy.android.percent.support.PercentRelativeLayout
+        android:id="@+id/ll_msg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         app:layout_marginLeftPercent="2%h"
         app:layout_marginRightPercent="2%h">
 
+        <ImageView
+            android:id="@+id/iv_error"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_centerInParent="true"
+            android:src="@mipmap/ic_obderror"
+            app:layout_heightPercent="45%w"
+            app:layout_widthPercent="45%w" />
 
         <com.zhy.android.percent.support.PercentFrameLayout
-            android:id="@+id/fl_top2"
+            android:id="@+id/fl_top"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
             app:layout_heightPercent="12%h">
 
             <TextView
-                android:id="@+id/tv_title"
+                android:id="@+id/tv_msg"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
@@ -31,146 +59,131 @@
                 android:gravity="center"
                 android:includeFontPadding="false"
                 android:lines="1"
-                android:text="胎压"
+                android:text="OBD没有连接"
                 app:layout_textSizePercent="50%h" />
         </com.zhy.android.percent.support.PercentFrameLayout>
+    </com.zhy.android.percent.support.PercentRelativeLayout>
 
-        <com.zhy.android.percent.support.PercentLinearLayout
-            android:id="@+id/ll_msg"
+    <com.zhy.android.percent.support.PercentRelativeLayout
+        android:id="@+id/ll_ty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_marginBottomPercent="2%h"
+        app:layout_marginLeftPercent="2%h"
+        app:layout_marginRightPercent="2%h">
+
+
+        <com.zhy.android.percent.support.PercentRelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:visibility="gone"
-            app:layout_marginLeftPercent="2%h"
-            app:layout_marginRightPercent="2%h">
+            android:layout_height="match_parent"
+            app:layout_marginTopPercent="12%h">
 
-            <TextView
-                android:id="@+id/tv_msg"
+            <FrameLayout
+                android:id="@+id/fl_lt_root"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="OBD没有连接"
-                app:layout_textSizePercent="10%h" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true">
 
-        <LinearLayout
-            android:id="@+id/ll_ty"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            app:layout_marginLeftPercent="2%h"
-            app:layout_marginBottomPercent="2%h"
-            app:layout_marginRightPercent="2%h">
-
-            <com.zhy.android.percent.support.PercentRelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <FrameLayout
-                    android:id="@+id/fl_lt_root"
+                <com.zhy.android.percent.support.PercentFrameLayout
+                    android:id="@+id/fl_lt"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true">
+                    android:layout_height="wrap_content">
 
-                    <com.zhy.android.percent.support.PercentFrameLayout
-                        android:id="@+id/fl_lt"
+                    <TextView
+                        android:id="@+id/tv_lt"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical|left"
+                        android:padding="12dp"
+                        android:text="左前\n0.0\n0.0"
+                        app:layout_textSizePercent="7%h" />
+                </com.zhy.android.percent.support.PercentFrameLayout>
+            </FrameLayout>
 
-                        <TextView
-                            android:id="@+id/tv_lt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical|left"
-                            android:padding="12dp"
-                            android:text="左前\n0.0\n0.0"
-                            app:layout_textSizePercent="7%h" />
-                    </com.zhy.android.percent.support.PercentFrameLayout>
-                </FrameLayout>
+            <FrameLayout
+                android:id="@+id/fl_rt_root"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true">
 
-                <FrameLayout
-                    android:id="@+id/fl_rt_root"
+                <com.zhy.android.percent.support.PercentFrameLayout
+                    android:id="@+id/fl_rt"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true">
+                    android:layout_height="wrap_content">
 
-                    <com.zhy.android.percent.support.PercentFrameLayout
-                        android:id="@+id/fl_rt"
+                    <TextView
+                        android:id="@+id/tv_rt"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/tv_rt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center_vertical|right"
-                            android:padding="12dp"
-                            android:text="右前\n0.0\n0.0"
-                            app:layout_textSizePercent="7%h" />
-                    </com.zhy.android.percent.support.PercentFrameLayout>
-                </FrameLayout>
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical|right"
+                        android:padding="12dp"
+                        android:text="右前\n0.0\n0.0"
+                        app:layout_textSizePercent="7%h" />
+                </com.zhy.android.percent.support.PercentFrameLayout>
+            </FrameLayout>
 
 
-                <FrameLayout
-                    android:id="@+id/fl_lb_root"
+            <FrameLayout
+                android:id="@+id/fl_lb_root"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true">
+
+                <com.zhy.android.percent.support.PercentFrameLayout
+                    android:id="@+id/fl_lb"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentBottom="true">
+                    android:layout_height="wrap_content">
 
-                    <com.zhy.android.percent.support.PercentFrameLayout
-                        android:id="@+id/fl_lb"
+                    <TextView
+                        android:id="@+id/tv_lb"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical|left"
+                        android:padding="12dp"
+                        android:text="左后\n0.0\n0.0"
+                        app:layout_textSizePercent="7%h" />
+                </com.zhy.android.percent.support.PercentFrameLayout>
+            </FrameLayout>
 
-                        <TextView
-                            android:id="@+id/tv_lb"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center_vertical|left"
-                            android:padding="12dp"
-                            android:text="左后\n0.0\n0.0"
-                            app:layout_textSizePercent="7%h" />
-                    </com.zhy.android.percent.support.PercentFrameLayout>
-                </FrameLayout>
+            <FrameLayout
+                android:id="@+id/fl_rb_root"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true">
 
-                <FrameLayout
-                    android:id="@+id/fl_rb_root"
+                <com.zhy.android.percent.support.PercentFrameLayout
+                    android:id="@+id/fl_rb"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentBottom="true">
+                    android:layout_height="wrap_content">
 
-                    <com.zhy.android.percent.support.PercentFrameLayout
-                        android:id="@+id/fl_rb"
+                    <TextView
+                        android:id="@+id/tv_rb"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical|right"
+                        android:padding="12dp"
+                        android:text="右后\n0.0\n0.0"
+                        app:layout_textSizePercent="7%h" />
+                </com.zhy.android.percent.support.PercentFrameLayout>
+            </FrameLayout>
 
-                        <TextView
-                            android:id="@+id/tv_rb"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical|right"
-                            android:padding="12dp"
-                            android:text="右后\n0.0\n0.0"
-                            app:layout_textSizePercent="7%h" />
-                    </com.zhy.android.percent.support.PercentFrameLayout>
-                </FrameLayout>
-
-                <ImageView
-                    android:id="@+id/iv_img"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_centerInParent="true"
-                    android:scaleType="centerInside"
-                    android:src="@mipmap/n_car2"
-                    app:layout_heightPercent="40%h"
-                    app:layout_widthPercent="40%w" />
-            </com.zhy.android.percent.support.PercentRelativeLayout>
-        </LinearLayout>
-    </com.zhy.android.percent.support.PercentLinearLayout>
-</com.zhy.android.percent.support.PercentFrameLayout>
+            <ImageView
+                android:id="@+id/iv_img"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_centerInParent="true"
+                android:scaleType="centerInside"
+                android:src="@mipmap/n_car2"
+                app:layout_heightPercent="40%h"
+                app:layout_widthPercent="40%w" />
+        </com.zhy.android.percent.support.PercentRelativeLayout>
+    </com.zhy.android.percent.support.PercentRelativeLayout>
+</com.zhy.android.percent.support.PercentRelativeLayout>
