--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_base"
@@ -7,6 +7,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
+
+    <com.zhy.android.percent.support.PercentFrameLayout
+        android:id="@+id/fl_top"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_heightPercent="12%h">
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:lines="1"
+            android:text="高德导航"
+            app:layout_textSizePercent="50%h" />
+    </com.zhy.android.percent.support.PercentFrameLayout>
 
     <com.zhy.android.percent.support.PercentRelativeLayout
         android:id="@+id/rl_moren"
@@ -22,29 +41,8 @@
             android:layout_height="0dp"
             android:layout_centerInParent="true"
             android:contentDescription="@string/app_name"
-            app:layout_heightPercent="40%w"
-            app:layout_widthPercent="40%w" />
-
-
-        <com.zhy.android.percent.support.PercentFrameLayout
-            android:id="@+id/fl_top2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_heightPercent="12%h">
-
-            <TextView
-                android:id="@+id/tv_title1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:includeFontPadding="false"
-                android:lines="1"
-                android:text="高德导航"
-                app:layout_textSizePercent="50%h" />
-        </com.zhy.android.percent.support.PercentFrameLayout>
-
+            app:layout_heightPercent="45%w"
+            app:layout_widthPercent="45%w" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -138,27 +136,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:visibility="gone"
         app:layout_marginLeftPercent="2%h"
         app:layout_marginRightPercent="2%h">
-
-        <com.zhy.android.percent.support.PercentFrameLayout
-            android:id="@+id/fl_top"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_heightPercent="12%h">
-
-            <TextView
-                android:id="@+id/tv_title2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:includeFontPadding="false"
-                android:lines="1"
-                android:text="高德导航"
-                app:layout_textSizePercent="50%h" />
-        </com.zhy.android.percent.support.PercentFrameLayout>
 
         <com.meetsl.scardview.SCardView
             android:id="@+id/fl_luxian"
@@ -172,7 +152,8 @@
             app:cardLightDirection="none"
             app:cardPreventCornerOverlap="false"
             app:cardUseCornerArea="true"
-            app:layout_heightPercent="22%h">
+            app:layout_heightPercent="22%h"
+            app:layout_marginTopPercent="12%h">
 
             <com.zhy.android.percent.support.PercentRelativeLayout
                 android:id="@+id/rl_view1"
@@ -371,4 +352,5 @@
             app:layout_marginTopPercent="5%h" />
 
     </com.zhy.android.percent.support.PercentRelativeLayout>
-</com.zhy.android.percent.support.PercentLinearLayout>
+
+</com.zhy.android.percent.support.PercentRelativeLayout>
