--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -40,6 +40,14 @@
     <color name="color_dark_light">#455A64</color>
     <color name="color_light">#ECEFF1</color>
 
+    <color name="l_title">#333e54</color>
+    <color name="l_title_b">#eee</color>
+    <color name="l_title_cb">#fbfbfb</color>
+
+    <color name="l_msg">#666f80</color>
+    <color name="l_msg_b">#eee</color>
+    <color name="l_msg_cb">#fbfbfb</color>
+
     <color name="l_text1">#333e54</color>
     <color name="l_text1_b">#eee</color>
     <color name="l_text1_cb">#fbfbfb</color>
