--- a/mobile/src/main/res/layout/content_l_time.xml
+++ b/mobile/src/main/res/layout/content_l_time.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_base"
@@ -8,95 +8,92 @@
     android:orientation="vertical"
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
 
+    <com.zhy.android.percent.support.PercentFrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_heightPercent="12%h">
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:lines="1"
+            android:text="时间"
+            app:layout_marginLeftPercent="25%h"
+            app:layout_textSizePercent="50%h" />
+    </com.zhy.android.percent.support.PercentFrameLayout>
+
     <com.zhy.android.percent.support.PercentLinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:orientation="vertical"
         app:layout_marginLeftPercent="2%h"
-        app:layout_marginRightPercent="2%h">
+        app:layout_marginRightPercent="2%h"
+        app:layout_marginTopPercent="12%h">
 
-        <com.zhy.android.percent.support.PercentFrameLayout
-            android:id="@+id/fl_top2"
+        <FrameLayout
+            android:id="@+id/fl_time_root"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_heightPercent="12%h">
+            android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/tv_title"
+            <com.zhy.android.percent.support.PercentFrameLayout
+                android:id="@+id/fl_time"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:includeFontPadding="false"
-                android:lines="1"
-                android:text="时间"
-                app:layout_textSizePercent="50%h" />
-        </com.zhy.android.percent.support.PercentFrameLayout>
+                android:layout_height="match_parent">
+
+                <com.wow.carlauncher.common.view.PhilTextView
+                    android:id="@+id/tv_shijian"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:ellipsize="marquee"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:text="09:99"
+                    app:layout_textSizePercent="60%h" />
+            </com.zhy.android.percent.support.PercentFrameLayout>
+        </FrameLayout>
 
         <com.zhy.android.percent.support.PercentLinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            app:layout_marginLeftPercent="2%h"
-            app:layout_marginRightPercent="2%h">
+            android:layout_weight="2"
+            android:orientation="vertical">
 
-            <FrameLayout
-                android:id="@+id/fl_time_root"
+            <TextView
+                android:id="@+id/tv_week"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="星期一"
+                app:layout_textSizePercent="10%h" />
 
-                <com.zhy.android.percent.support.PercentFrameLayout
-                    android:id="@+id/fl_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <com.wow.carlauncher.common.view.PhilTextView
-                        android:id="@+id/tv_shijian"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="09:99"
-                        app:layout_textSizePercent="70%h" />
-                </com.zhy.android.percent.support.PercentFrameLayout>
-            </FrameLayout>
-
-            <com.zhy.android.percent.support.PercentLinearLayout
+            <TextView
+                android:id="@+id/tv_day"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2"
-                android:orientation="vertical">
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="2019年1月4日"
+                app:layout_textSizePercent="12%h" />
 
-                <TextView
-                    android:id="@+id/tv_week"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="星期一"
-                    app:layout_textSizePercent="10%h" />
+            <TextView
+                android:id="@+id/tv_lunar"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="农历一月初四"
+                app:layout_textSizePercent="8%h" />
 
-                <TextView
-                    android:id="@+id/tv_day"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="2019年1月4日"
-                    app:layout_textSizePercent="12%h" />
-
-                <TextView
-                    android:id="@+id/tv_lunar"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="农历一月初四"
-                    app:layout_marginBottomPercent="40%h"
-                    app:layout_textSizePercent="8%h" />
-            </com.zhy.android.percent.support.PercentLinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2" />
         </com.zhy.android.percent.support.PercentLinearLayout>
     </com.zhy.android.percent.support.PercentLinearLayout>
-</com.zhy.android.percent.support.PercentFrameLayout>
+</com.zhy.android.percent.support.PercentRelativeLayout>
