--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -9,7 +9,6 @@
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
 
     <com.zhy.android.percent.support.PercentFrameLayout
-        android:id="@+id/fl_top"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_heightPercent="12%h">
@@ -18,12 +17,11 @@
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
             android:gravity="center"
             android:includeFontPadding="false"
             android:lines="1"
             android:text="高德导航"
+            app:layout_marginLeftPercent="25%h"
             app:layout_textSizePercent="50%h" />
     </com.zhy.android.percent.support.PercentFrameLayout>
 
