--- a/mobile/src/main/res/layout/content_l_taiya.xml
+++ b/mobile/src/main/res/layout/content_l_taiya.xml
@@ -8,22 +8,19 @@
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
 
     <com.zhy.android.percent.support.PercentFrameLayout
-        android:id="@+id/fl_top2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_alignParentTop="true"
         app:layout_heightPercent="12%h">
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
             android:gravity="center"
             android:includeFontPadding="false"
             android:lines="1"
             android:text="胎压"
+            app:layout_marginLeftPercent="25%h"
             app:layout_textSizePercent="50%h" />
     </com.zhy.android.percent.support.PercentFrameLayout>
 
@@ -59,7 +56,7 @@
                 android:gravity="center"
                 android:includeFontPadding="false"
                 android:lines="1"
-                android:text="OBD没有连接"
+                android:text="@string/obd_not_connect"
                 app:layout_textSizePercent="50%h" />
         </com.zhy.android.percent.support.PercentFrameLayout>
     </com.zhy.android.percent.support.PercentRelativeLayout>
