--- a/mobile/src/main/res/layout/content_l_obd.xml
+++ b/mobile/src/main/res/layout/content_l_obd.xml
@@ -22,6 +22,7 @@
             android:lines="1"
             android:text="OBD车况"
             app:layout_marginLeftPercent="25%h"
+            app:layout_marginRightPercent="25%h"
             app:layout_textSizePercent="50%h" />
     </com.zhy.android.percent.support.PercentFrameLayout>
 
